--- a/main.html
+++ b/main.html
@@ -3,11 +3,21 @@
 <html>
 
 <head>
+	<title>Accessible Portfolio</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Harshit Tyagi</h1>
+	<nav><ul><li>about</li><li>contact</li></ul></nav>
+	<img src="" alt="image" />
+	<p>this is description</p>
+	<ul>
+		<li>Money</li>
+		<li>Family</li>
+		<li>Health</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
