--- a/main.html
+++ b/main.html
@@ -9,15 +9,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<ul>
-		<li>Money</li>
-		<li>Family</li>
-		<li>Health</li>
-	</ul>
-	<nav><ul><li>about</li><li>contact</li></ul></nav>
-	<p>this is description</p>
-	<h1>Harshit Tyagi</h1>
-	<img src="" alt="image" />
+	Include a heading, navigation bar, image, brief description, and a list with at least three items.
+All HTML tags must have the respective ARIA roles from the table.
+The document must have a proper title and linked CSS file.
+The img tag must include an alt attribute.
     <script type="text/javascript" src="./script.js">
 </script>
 
