--- a/main.html
+++ b/main.html
@@ -9,15 +9,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<header role="heading">
-        <h1>Accessible Web Page</h1>
-    </header>
+        <h1 role="heading">Accessible Web Page</h1>
     
     <nav role="navigation">
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li role="listitem"><a href="#home">Home</a></li>
+            <li role="listitem"><a href="#about">About</a></li>
+            <li role="listitem"><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     
