--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
         <h1 role="heading">Accessible Web Page</h1>
     
     <nav role="navigation">
-        <ul>
+        <ul role="list">
             <li role="listitem"><a href="#home">Home</a></li>
             <li role="listitem"><a href="#about">About</a></li>
             <li role="listitem"><a href="#contact">Contact</a></li>
